--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
                 </form>
             </div>
 
-            <div id="searchStudents" class="hidden">
-                <h2 class="text-2xl font-bold mb-4">Search Students</h2>
-                <input type="text" id="searchTerm" placeholder="Enter search term" class="w-full px-3 py-2 border rounded mb-4">
-                <button onclick="searchStudents()" class="w-full bg-green-500 hover:bg-green-600 text-white py-2 rounded">Search</button>
-                <div id="searchResults" class="mt-4"></div>
-            </div>
+           <div id="searchStudents" class="hidden">
+               <h2 class="text-2xl font-bold mb-4">Search Students</h2>
+               <input type="text" id="searchTerm" placeholder="Enter search term" class="w-full px-3 py-2 border rounded mb-4">
+               <button onclick="searchStudents()" class="w-full bg-green-500 hover:bg-green-600 text-white py-2 rounded">Search</button>
+               <div id="searchResults" class="mt-4"></div>
+           </div>
 
             <div id="generateReport" class="hidden">
                 <h2 class="text-2xl font-bold mb-4">Course Enrollment Report</h2>
@@ -58,32 +58,35 @@
 
             <div id="allStudents" class="hidden">
                 <h2 class="text-2xl font-bold mb-4">All Students</h2>
-                <table class="w-full border-collapse border">
+                <table id="studentsTable" class="w-full border-collapse border">
                     <thead>
-                        <tr class="bg-gray-200">
+                        <tr>
                             <th class="border p-2">Student No</th>
                             <th class="border p-2">Name</th>
                             <th class="border p-2">Email</th>
                             <th class="border p-2">Phone</th>
                             <th class="border p-2">Course</th>
-                            <th class="border p-2">Actions</th>
                         </tr>
                     </thead>
-                    <tbody id="allStudentsTable">
-                    </tbody>
+                    <tbody id="studentsTableBody"></tbody>
                 </table>
             </div>
         </div>
     </div>
 
+    <script src="studentSearch.js"></script>
+    <script src="allStudents.js"></script>
     <script>
-        const API_BASE_URL = 'https://your-api-endpoint.com/api';
-
         function showSection(sectionId) {
             document.querySelectorAll('div[id]').forEach(div => div.classList.add('hidden'));
             document.getElementById(sectionId).classList.remove('hidden');
             if (sectionId === 'generateReport') generateReport();
             if (sectionId === 'allStudents') displayAllStudents();
+        }
+
+        function showHome() {
+            document.querySelectorAll('div[id]').forEach(div => div.classList.add('hidden'));
+            document.getElementById('menu').classList.remove('hidden');
         }
 
         document.getElementById('addStudentForm').onsubmit = function(e) {
@@ -95,198 +98,52 @@
                 phone: document.getElementById('phone').value,
                 course: document.getElementById('course').value
             };
-            fetch(`${API_BASE_URL}/students`, {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json',
-                },
-                body: JSON.stringify(student),
-            })
-            .then(response => response.json())
-            .then(data => {
-                alert('Student added successfully!');
-                this.reset();
-                displayAllStudents();
-            })
-            .catch((error) => {
-                console.error('Error:', error);
-                alert('Error adding student');
-            });
+            // Here you would typically send this data to your Java backend
+            alert('Student added successfully!');
+            this.reset();
         };
 
-        function searchStudents() {
-            let searchTerm = document.getElementById('searchTerm').value;
-            fetch(`${API_BASE_URL}/students/search?term=${encodeURIComponent(searchTerm)}`)
-            .then(response => response.json())
-            .then(students => displaySearchResults(students))
-            .catch((error) => {
-                console.error('Error:', error);
-                alert('Error searching students');
-            });
-        }
-
-        function displaySearchResults(results) {
-            let resultsDiv = document.getElementById('searchResults');
-            if (results.length === 0) {
-                resultsDiv.innerHTML = '<p class="text-red-500">No results found.</p>';
-            } else {
-                resultsDiv.innerHTML = results.map(student => 
-                    `<div class="border p-2 mb-2">
-                        <p><strong>Student No:</strong> ${student.studentNo}</p>
-                        <p><strong>Name:</strong> ${student.studentName}</p>
-                        <p><strong>Email:</strong> ${student.email}</p>
-                        <p><strong>Phone:</strong> ${student.phone}</p>
-                        <p><strong>Course:</strong> ${student.course}</p>
-                    </div>`
-                ).join('');
-            }
-        }
-
         function generateReport() {
-            fetch(`${API_BASE_URL}/students`)
-            .then(response => response.json())
-            .then(students => {
-                let courseCounts = students.reduce((acc, student) => {
-                    acc[student.course] = (acc[student.course] || 0) + 1;
-                    return acc;
-                }, {});
+            // This function would typically fetch data from your Java backend
+            // For now, we'll use dummy data
+            let courseCounts = {
+                'Java Programming': 10,
+                'Web Development': 15,
+                'Database Management': 8
+            };
 
-                let ctx = document.getElementById('reportChart').getContext('2d');
-                new Chart(ctx, {
-                    type: 'bar',
-                    data: {
-                        labels: Object.keys(courseCounts),
-                        datasets: [{
-                            label: 'Students per Course',
-                            data: Object.values(courseCounts),
-                            backgroundColor: 'rgba(75, 192, 192, 0.6)',
-                            borderColor: 'rgba(75, 192, 192, 1)',
-                            borderWidth: 1
-                        }]
-                    },
-                    options: {
-                        scales: {
-                            y: {
-                                beginAtZero: true,
-                                title: {
-                                    display: true,
-                                    text: 'Number of Students'
-                                }
-                            },
-                            x: {
-                                title: {
-                                    display: true,
-                                    text: 'Courses'
-                                }
+            let ctx = document.getElementById('reportChart').getContext('2d');
+            new Chart(ctx, {
+                type: 'bar',
+                data: {
+                    labels: Object.keys(courseCounts),
+                    datasets: [{
+                        label: 'Students per Course',
+                        data: Object.values(courseCounts),
+                        backgroundColor: 'rgba(75, 192, 192, 0.6)',
+                        borderColor: 'rgba(75, 192, 192, 1)',
+                        borderWidth: 1
+                    }]
+                },
+                options: {
+                    scales: {
+                        y: {
+                            beginAtZero: true,
+                            title: {
+                                display: true,
+                                text: 'Number of Students'
+                            }
+                        },
+                        x: {
+                            title: {
+                                display: true,
+                                text: 'Courses'
                             }
                         }
                     }
-                });
-            })
-            .catch((error) => {
-                console.error('Error:', error);
-                alert('Error generating report');
+                }
             });
         }
-
-        function showHome() {
-            document.querySelectorAll('div[id]').forEach(div => div.classList.add('hidden'));
-            document.getElementById('menu').classList.remove('hidden');
-        }
-
-        function displayAllStudents() {
-            fetch(`${API_BASE_URL}/students`)
-            .then(response => response.json())
-            .then(students => {
-                let tableBody = document.getElementById('allStudentsTable');
-                tableBody.innerHTML = students.map(student => 
-                    `<tr>
-                        <td class="border p-2">${student.studentNo}</td>
-                        <td class="border p-2">${student.studentName}</td>
-                        <td class="border p-2">${student.email}</td>
-                        <td class="border p-2">${student.phone}</td>
-                        <td class="border p-2">${student.course}</td>
-                        <td class="border p-2">
-                            <button onclick="editStudent('${student.studentNo}')" class="bg-yellow-500 hover:bg-yellow-600 text-white py-1 px-2 rounded mr-2">Edit</button>
-                            <button onclick="deleteStudent('${student.studentNo}')" class="bg-red-500 hover:bg-red-600 text-white py-1 px-2 rounded">Delete</button>
-                        </td>
-                    </tr>`
-                ).join('');
-            })
-            .catch((error) => {
-                console.error('Error:', error);
-                alert('Error fetching students');
-            });
-        }
-
-        function editStudent(studentNo) {
-            fetch(`${API_BASE_URL}/students/${studentNo}`)
-            .then(response => response.json())
-            .then(student => {
-                document.getElementById('studentNo').value = student.studentNo;
-                document.getElementById('studentName').value = student.studentName;
-                document.getElementById('email').value = student.email;
-                document.getElementById('phone').value = student.phone;
-                document.getElementById('course').value = student.course;
-                
-                showSection('addStudent');
-                document.getElementById('addStudentForm').onsubmit = function(e) {
-                    e.preventDefault();
-                    updateStudent(studentNo);
-                };
-            })
-            .catch((error) => {
-                console.error('Error:', error);
-                alert('Error fetching student details');
-            });
-        }
-
-        function updateStudent(studentNo) {
-            let student = {
-                studentNo: document.getElementById('studentNo').value,
-                studentName: document.getElementById('studentName').value,
-                email: document.getElementById('email').value,
-                phone: document.getElementById('phone').value,
-                course: document.getElementById('course').value
-            };
-            fetch(`${API_BASE_URL}/students/${studentNo}`, {
-                method: 'PUT',
-                headers: {
-                    'Content-Type': 'application/json',
-                },
-                body: JSON.stringify(student),
-            })
-            .then(response => response.json())
-            .then(data => {
-                alert('Student updated successfully!');
-                document.getElementById('addStudentForm').reset();
-                displayAllStudents();
-            })
-            .catch((error) => {
-                console.error('Error:', error);
-                alert('Error updating student');
-            });
-        }
-
-        function deleteStudent(studentNo) {
-            if (confirm('Are you sure you want to delete this student?')) {
-                fetch(`${API_BASE_URL}/students/${studentNo}`, {
-                    method: 'DELETE',
-                })
-                .then(response => response.json())
-                .then(data => {
-                    alert('Student deleted successfully!');
-                    displayAllStudents();
-                })
-                .catch((error) => {
-                    console.error('Error:', error);
-                    alert('Error deleting student');
-                });
-            }
-        }
-
-        // Initialize the page
-        showHome();
     </script>
 </body>
 </html>
